--- a/wikiorg.glade
+++ b/wikiorg.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.1 on Sat Apr 12 21:32:07 2008 -->
+<!--Generated with glade3 3.4.1 on Sat Apr 12 21:33:36 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="mainWindow">
     <property name="visible">True</property>
@@ -27,6 +27,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem1">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">gtk-new</property>
                         <property name="use_underline">True</property>
@@ -36,6 +37,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem2">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">gtk-open</property>
                         <property name="use_underline">True</property>
@@ -55,6 +57,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem4">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">gtk-save-as</property>
                         <property name="use_underline">True</property>
@@ -94,6 +97,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem6">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">gtk-cut</property>
                         <property name="use_underline">True</property>
@@ -103,6 +107,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem7">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">gtk-copy</property>
                         <property name="use_underline">True</property>
@@ -112,6 +117,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem8">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">gtk-paste</property>
                         <property name="use_underline">True</property>
@@ -121,6 +127,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem9">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">gtk-delete</property>
                         <property name="use_underline">True</property>
@@ -152,6 +159,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="imagemenuitem10">
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                         <property name="label" translatable="yes">gtk-about</property>
                         <property name="use_underline">True</property>
