--- a/wikiorg.glade
+++ b/wikiorg.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.1 on Sun Apr 13 15:14:19 2008 -->
+<!--Generated with glade3 3.4.1 on Sun Apr 13 16:21:49 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="mainWindow">
     <property name="visible">True</property>
@@ -192,7 +192,7 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkToolButton" id="btnGoForward">
+              <widget class="GtkMenuToolButton" id="btnGoForward">
                 <property name="visible">True</property>
                 <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
                 <property name="stock_id">gtk-go-forward</property>
